<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/gray_f8"
    android:divider="@drawable/bg_divider_black"
    android:showDividers="middle"
    android:layout_height="match_parent">
    <!--我的下载-->
    <RelativeLayout
        android:id="@+id/rl_download"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/height_10"
        android:layout_height="@dimen/height_48">
        <TextView
            android:text="@string/my_download"
            android:textSize="@dimen/text_14"
            android:layout_marginLeft="@dimen/height_16"
            android:drawableLeft="@drawable/ic_download"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:drawablePadding="@dimen/height_10"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="@dimen/height_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_height="@dimen/height_10"
            android:src="@mipmap/icon_arrow_right"/>
    </RelativeLayout>
    <!--我的收藏-->
    <RelativeLayout
        android:id="@+id/rl_collect"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="@dimen/height_48">
        <TextView
            android:text="@string/my_collect"
            android:textSize="@dimen/text_14"
            android:drawableLeft="@drawable/ic_like"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/height_16"
            android:drawablePadding="@dimen/height_10"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="@dimen/height_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_height="@dimen/height_10"
            android:src="@mipmap/icon_arrow_right"/>

    </RelativeLayout>
    <!--我的订单-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/height_10"
        android:layout_height="@dimen/height_48">
        <TextView
            android:text="@string/my_order"
            android:textSize="@dimen/text_14"
            android:drawableLeft="@drawable/ic_order"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/height_16"
            android:drawablePadding="@dimen/height_10"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="@dimen/height_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_height="@dimen/height_10"
            android:src="@mipmap/icon_arrow_right"/>
    </RelativeLayout>
    <!--我的优惠券-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="@dimen/height_48">
        <TextView
            android:text="@string/my_coupon"
            android:textSize="@dimen/text_14"
            android:drawableLeft="@drawable/ic_coupon"
            android:layout_marginLeft="@dimen/height_16"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:drawablePadding="@dimen/height_10"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="@dimen/height_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_height="@dimen/height_10"
            android:src="@mipmap/icon_arrow_right"/>
    </RelativeLayout>
    <!--我的语音导游-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/height_10"
        android:layout_height="@dimen/height_48">
        <TextView
            android:text="@string/my_voice_guide"
            android:textSize="@dimen/text_14"
            android:drawableLeft="@drawable/ic_navigation_cricle"
            android:layout_marginLeft="@dimen/height_16"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:drawablePadding="@dimen/height_10"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="@dimen/height_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_height="@dimen/height_10"
            android:src="@mipmap/icon_arrow_right"/>
    </RelativeLayout>
    <!--我的写作-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="@dimen/height_48">
        <TextView
            android:text="@string/my_writing"
            android:textSize="@dimen/text_14"
            android:drawableLeft="@drawable/ic_writing"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/height_16"
            android:drawablePadding="@dimen/height_10"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="@dimen/height_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_height="@dimen/height_10"
            android:src="@mipmap/icon_arrow_right"/>
    </RelativeLayout>
    <!--安全中心-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="@dimen/height_10"
        android:layout_height="@dimen/height_48">
        <TextView
            android:text="@string/safe_center"
            android:textSize="@dimen/text_14"
            android:drawableLeft="@drawable/ic_security"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/height_16"
            android:drawablePadding="@dimen/height_10"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="@dimen/height_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_height="@dimen/height_10"
            android:src="@mipmap/icon_arrow_right"/>
    </RelativeLayout>
</LinearLayout>