<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/activity_title"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/blue2"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/zxwk_safe_pay"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/height_10"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/height_20"
            android:background="@color/white"
            cardCornerRadius="4dp"
            cardMaxElevation="1dp"
            cardElevation="1dp"
            android:layout_height="320dp"
            android:layout_marginLeft="@dimen/height_20"
            android:layout_marginRight="@dimen/height_20" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_bar_num"
                    android:text="1300 9985 1289 163748"
                    android:layout_marginTop="@dimen/height_20"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_18"
                    android:textColor="@color/gray_33"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/iv_bar_code"
                    android:layout_below="@+id/tv_bar_num"
                    android:layout_marginLeft="@dimen/height_15"
                    android:layout_marginRight="@dimen/height_15"
                    android:layout_marginTop="@dimen/height_15"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />
                <ImageView
                    android:id="@+id/iv_qrcode"
                    android:layout_below="@+id/iv_bar_code"
                    android:layout_marginLeft="@dimen/height_15"
                    android:layout_marginRight="@dimen/height_15"
                    android:layout_marginTop="@dimen/height_15"
                    android:layout_centerHorizontal="true"
                    android:layout_width="96dp"
                    android:layout_height="96dp" />
                <RelativeLayout
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/height_15"
                    android:background="@color/gray_ce"
                    android:layout_below="@+id/iv_qrcode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">
                    <TextView
                        android:id="@+id/tv_account_money"
                        android:drawableLeft="@drawable/ic_mine_select"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/account_money"
                        android:gravity="center"
                        android:textColor="@color/gray_33"
                        android:textSize="@dimen/text_16"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_changer"
                        android:layout_toRightOf="@+id/tv_account_money"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/changer"
                        android:textColor="@color/blue1"
                        android:gravity="center"
                        android:textSize="@dimen/text_16"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/height_15"
            android:text="@string/auto_update"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>