<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validation="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <variable
            name="loginViewModel"
            type="com.footprint.travel.viewmodel.LoginViewModel">
        </variable>
    </data>
<RelativeLayout android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <include layout="@layout/toolbar_comm"></include>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/float_button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/card_view_login"
            android:layout_alignTop="@id/card_view_login"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_register"
            android:transitionName="loginFab"
            app:fabSize="normal" />
       <android.support.v7.widget.CardView
           android:id="@+id/card_view_login"
           android:layout_width="320dp"
           android:layout_centerInParent="true"
           app:cardCornerRadius="6dp"
           app:cardElevation="3dp"
           app:cardUseCompatPadding="true"
           android:layout_height="350dp">

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <RelativeLayout
                   android:layout_marginTop="@dimen/height_5"
                   android:layout_width="match_parent"
                   android:layout_height="45dp">
                   <View
                       android:layout_width="8dp"
                       android:layout_height="match_parent"
                       android:background="@color/green_them" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerVertical="true"
                       android:layout_marginLeft="50dp"
                       android:text="@string/login"
                       android:textColor="@color/green_them"
                       android:textSize="18sp"
                       android:textStyle="bold" />
               </RelativeLayout>
               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_layout_phone"
                   android:layout_marginTop="@dimen/activity_vertical_margin"
                   android:paddingLeft="20dp"
                   android:paddingRight="20dp"
                   validation:autoTrim="true"
                   validation:isRequired="true"
                   validation:regex="^[1][3,4,5,8][0-9]{9}$"
                   validation:regexValidationMessage="请填写有效的手机号码"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/text_input_et_phone"
                       android:hint="@string/phone_num"
                       android:maxLength="11"
                       android:inputType="number"
                       android:singleLine="true"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_layout_pwd"
                   android:layout_marginTop="@dimen/activity_vertical_margin"
                   android:paddingLeft="20dp"
                   android:paddingRight="20dp"
                   app:counterEnabled="true"
                   app:counterMaxLength="20"
                   app:passwordToggleEnabled="true"
                   validation:autoValidate="true"
                   validation:maxLength="20"
                   validation:minLength="6"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/text_input_et_pwd"
                       android:hint="@string/login_pwd"
                       android:maxLength="20"
                       android:inputType="textPassword"
                       android:singleLine="true"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />
               </android.support.design.widget.TextInputLayout>
                <TextView
                    android:text="@string/forget_pwd"
                    android:drawableLeft="@drawable/ic_help"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:textSize="@dimen/text_12"
                    android:layout_marginRight="@dimen/height_20"
                    android:drawablePadding="@dimen/height_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
               <Button
                   android:id="@+id/button_login"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/height_48"
                   android:layout_marginLeft="@dimen/height_20"
                   android:layout_marginRight="@dimen/height_20"
                   android:layout_marginTop="@dimen/height_16"
                   android:background="@color/green_them"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/login"
                   android:textColor="@color/white" />
           </LinearLayout>
       </android.support.v7.widget.CardView>

    </RelativeLayout>
  </layout>