<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validation="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <variable
            name="registerViewModel"
            type="com.footprint.travel.viewmodel.RegisterViewModel">
        </variable>
    </data>
<RelativeLayout android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_comm"
        android:id="@+id/include"></include>

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="470dp"
        android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/green_them"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:text="注册"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <!--手机号-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/validate_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:onClick="@{registerViewModel::onClickEvent}"
                    app:theme="@style/AppTheme.TextInputLayoutRegister">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_num"
                        android:inputType="number"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>
                <!--验证码-->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/validate_text_verify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="20dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        app:theme="@style/AppTheme.TextInputLayoutRegister">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_register_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/verify_code"
                            android:inputType="number"
                            android:maxLength="6"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_verify_code"
                        android:layout_width="56dp"
                        android:text="@string/get_code"
                        android:textSize="@dimen/text_10"
                        android:textColor="@color/green_them"
                        android:background="@color/white"
                        android:layout_marginRight="25dp"
                        android:onClick="@{registerViewModel::onClickEvent}"
                        android:layout_gravity="right|bottom"
                        android:layout_marginBottom="@dimen/height_8"
                        android:layout_height="@dimen/height_30"
                       />
                </FrameLayout>
                <!--登录密码-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/validate_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    app:counterEnabled="true"
                    android:textColorHint="@color/white"
                    app:theme="@style/AppTheme.TextInputLayoutRegister"
                    validation:autoValidate="true"
                    validation:maxLength="20"
                    validation:minLength="6">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="登录密码"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@color/white" />

                </android.support.design.widget.TextInputLayout>
                <!--确认密码-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/validate_text_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:counterEnabled="true"
                    app:theme="@style/AppTheme.TextInputLayoutRegister"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_pwd_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="确认密码"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="@dimen/height_20"
                        android:layout_marginRight="@dimen/height_20"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:text="注册"
                        android:onClick="@{registerViewModel::onClickEvent}"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/float_button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:onClick="@{registerViewModel::onClickEvent}"
            android:src="@drawable/ic_login2"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>

</RelativeLayout>
</layout>